# local-jamba

./: .gitignore  README.md  jamba-one-shot-doc-chat.ipynb  main.py  pyproject.toml
scripts/: setup_assets.py
src/jamba_cli/: __init__.py  chunker.py  cli.py  crawler.py  document.py  embeddings.py  rag.py  settings.py  setup_assets.py  store.py
src/local_jamba.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
