[project]
name = "local-jamba"
version = "0.1.0"
description = "Playful CLI to chat with full PDFs using AI21 Jamba Reasoning 3B"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=1.1.7",
    "llama-cpp-python>=0.2.92",
    "pypdf>=6.4.0",
    "requests>=2.32.5",
    "rich>=14.2.0",
]

[project.scripts]
jamba-chat = "jamba_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true
